# rust-python3

./: Cargo.toml  README.md
.github/workflows/: lib.yml
src/: alloc.rs  grep.rs  lib.rs  list.rs  math.rs
src/list/: helper.rs  parallel.rs  serial.rs
