[package]
name = "rpython"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rpython"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.16.4"
rand = "0.8.5"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
