[package]
name = "rpython"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rpython"
crate-type = ["cdylib"]

[dependencies]
num-bigint = "0.4.2"
num-traits = "0.2.14"
pyo3 = {version = "0.16.4", features = ["num-bigint"]}
rand = "0.8.5"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
